adding arb nodes

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-data1/*
-!data1/readme.md
-data2/*
-!data2/readme.md
-data3/*
-!data3/readme.md
+arb*/*
+!arb*/readme.md
+data*/*
+!data*/readme.md
 logs/*
 !logs/readme.md
