more streamlined installation procedure

--- a/arb1.conf
+++ b/arb1.conf
@@ -1,16 +1,16 @@
 storage:
-  dbPath: ./arb2/
+  dbPath: C:/db/arb1/
   journal:
     enabled: true
 
 systemLog:
   destination: file
   logAppend: true
-  path: ./logs/arb2.log
+  path: C:/db/logs/arb1.log
 
 net:
-  port: 27721
-  bindIp: 127.0.0.1
+  port: 27720
+  bindIp: 0.0.0.0
 
 #processManagement:
 #  timeZoneInfo: /usr/share/zoneinfo
