--- a/arb2.conf
+++ b/arb2.conf
@@ -1,16 +1,16 @@
 storage:
-  dbPath: ./data3/
+  dbPath: C:/db/arb2/
   journal:
     enabled: true
 
 systemLog:
   destination: file
   logAppend: true
-  path: ./logs/mongod3.log
+  path: C:/db/logs/arb2.log
 
 net:
-  port: 27719
-  bindIp: 127.0.0.1
+  port: 27721
+  bindIp: 0.0.0.0
 
 #processManagement:
 #  timeZoneInfo: /usr/share/zoneinfo
