--- a/node2.conf
+++ b/node2.conf
@@ -1,16 +1,16 @@
 storage:
-  dbPath: ./arb1/
+  dbPath: C:/db/node2/
   journal:
     enabled: true
 
 systemLog:
   destination: file
   logAppend: true
-  path: ./logs/arb1.log
+  path: C:/db/logs/node2/mongod.log
 
 net:
-  port: 27720
-  bindIp: 127.0.0.1
+  port: 27718
+  bindIp: 0.0.0.0
 
 #processManagement:
 #  timeZoneInfo: /usr/share/zoneinfo
