--- a/node3.conf
+++ b/node3.conf
@@ -1,16 +1,16 @@
 storage:
-  dbPath: ./data2/
+  dbPath: C:/db/node3/
   journal:
     enabled: true
 
 systemLog:
   destination: file
   logAppend: true
-  path: ./logs/mongod2.log
+  path: C:/db/logs/node3/mongod.log
 
 net:
-  port: 27718
-  bindIp: 127.0.0.1
+  port: 27719
+  bindIp: 0.0.0.0
 
 #processManagement:
 #  timeZoneInfo: /usr/share/zoneinfo
