--- a/node1.conf
+++ b/node1.conf
@@ -1,16 +1,16 @@
 storage:
-  dbPath: ./data1/
+  dbPath: C:/db/node1/
   journal:
     enabled: true
 
 systemLog:
   destination: file
   logAppend: true
-  path: ./logs/mongod1.log
+  path: C:/db/logs/node1/mongod.log
 
 net:
   port: 27717
-  bindIp: 127.0.0.1
+  bindIp: 0.0.0.0
 
 #processManagement:
 #  timeZoneInfo: /usr/share/zoneinfo
