--- a/node1.conf
+++ b/node1.conf
@@ -6,7 +6,7 @@ storage:
 systemLog:
   destination: file
   logAppend: true
-  path: C:/db/logs/node1/mongod.log
+  path: C:/db/logs/node1.log
 
 net:
   port: 27717
