--- a/node2.conf
+++ b/node2.conf
@@ -6,7 +6,7 @@ storage:
 systemLog:
   destination: file
   logAppend: true
-  path: C:/db/logs/node2/mongod.log
+  path: C:/db/logs/node2.log
 
 net:
   port: 27718
