--- a/node3.conf
+++ b/node3.conf
@@ -6,7 +6,7 @@ storage:
 systemLog:
   destination: file
   logAppend: true
-  path: C:/db/logs/node3/mongod.log
+  path: C:/db/logs/node3.log
 
 net:
   port: 27719
