--- a/arb2.conf
+++ b/arb2.conf
@@ -10,7 +10,7 @@ systemLog:
 
 net:
   port: 27721
-  bindIp: 0.0.0.0
+  bindIp: localhost, 0.0.0.0
 
 #processManagement:
 #  timeZoneInfo: /usr/share/zoneinfo
@@ -19,9 +19,9 @@ operationProfiling:
   mode: "slowOp"
   slowOpThresholdMs: 50
 
-#security:
-#  authorization: enabled
-#  keyFile: /var/lib/mongodb-pki/keyfile
+# security:
+#   authorization: enabled
+#   keyFile: C:/db/mongo-key
 
 replication:
-  replSetName: razrnodes
+  replSetName: "razrnodes"
